--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -29,21 +29,21 @@
       <% if @current_student %>
         <a href="/history"><h5 class="text-white h4">学習履歴</h5></a>
       <% else %>
-        <a href="#"><h5 class="text-white h4">学習履歴</h5></a>
+        <a href="#"><h5 class="text-white h4">生徒の学習履歴</h5></a>
       <% end %>
     </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
-        <a href="/students/show_test"><h5 class="text-white h4">小テスト</h5></a>
+        <a href="/students/show_test"><h5 class="text-white h4">テスト成績推移</h5></a>
       <% else %>
-        <a href="#"><h5 class="text-white h4">小テスト</h5></a>
+        <a href="#"><h5 class="text-white h4">生徒のテスト成績推移</h5></a>
       <% end %>
       </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
-        <a href="/students/show_calender"><h5 class="text-white h4">授業</h5></a>
+        <a href="/students/show_calender"><h5 class="text-white h4">授業日程の確認</h5></a>
       <% else %>
-        <a href="/teachers/show_calender"><h5 class="text-white h4">授業</h5></a>
+        <a href="/teachers/show_calender"><h5 class="text-white h4">生徒の授業日程</h5></a>
       <% end %>
     </div>
     <div class="bg-dark p-4">
