teacherがアクセスするページにおいて、不足していたリンクを各所に貼った。

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -44,7 +44,7 @@
   <% end%>
   <% if @current_teacher %>
     <div class="new_message_add">
-    <a href="#" class="new_message_add_btn">
+    <a href="/news/new_msg" class="new_message_add_btn">
     <i class="fas fa-comment message_icon"></i>
     </a>
     </div>
