--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -22,32 +22,29 @@
       <% if @current_student %>
         <a href="/students/<%= @current_student.id %>"><h5 class="text-white h4">プロフィール</h5></a>
       <% else %>
-        <a href="#"><h5 class="text-white h4">プロフィール</h5></a>
+        <a href="/teachers/<%= @current_teacher.id %>"><h5 class="text-white h4">プロフィール</h5></a>
       <% end %>
     </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
         <a href="/history"><h5 class="text-white h4">学習履歴</h5></a>
       <% else %>
-        <a href="#"><h5 class="text-white h4">生徒の学習履歴</h5></a>
+        <a href="/teachers/history"><h5 class="text-white h4">生徒の学習履歴</h5></a>
       <% end %>
     </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
         <a href="/students/show_test"><h5 class="text-white h4">テスト成績推移</h5></a>
       <% else %>
-        <a href="#"><h5 class="text-white h4">生徒のテスト成績推移</h5></a>
+        <a href="/teachers/show_test"><h5 class="text-white h4">生徒のテスト成績推移</h5></a>
       <% end %>
       </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
         <a href="/students/show_calender"><h5 class="text-white h4">授業日程の確認</h5></a>
       <% else %>
-        <a href="/teachers/show_calender"><h5 class="text-white h4">生徒の授業日程</h5></a>
+        <a href="/teachers/show_calender/1"><h5 class="text-white h4">生徒の授業日程</h5></a>
       <% end %>
-    </div>
-    <div class="bg-dark p-4">
-      <%= link_to "ログアウト", "/sessions/destroy", method: :delete, class: "btn btn-danger" %>
     </div>
   </div>
   <nav class="navbar navbar-dark bg-dark">
@@ -55,7 +52,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-titile">
-    <a href="#"><h2>TeachApp</h2></a>
+    <a href="/news_field"><h2>TeachApp</h2></a>
     </div>
   </nav>
 </div>
