--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -23,7 +23,7 @@
         <h4>Your Students</h4>
       </div>
       <div class="your_students_add">
-        <a href="#" class="your_students_add_btn">
+        <a href="/students/index" class="your_students_add_btn">
           <i class="fas fa-plus your_students_add_icon"></i>
         </a>
       </div>
