--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -14,6 +14,7 @@
       <div class="student-profile-subject">
         <h5>志望校</h5><h2><%= @current_student.school_of_choice %></h2>
       </div>
+      <%= link_to "ログアウト", "/sessions/destroy", method: :delete, data: { confirm: "本当にログアウトしますか？" }, class: "btn btn-outline-danger" %>
     </div>
   </div>
 
@@ -37,6 +38,7 @@
         <div class="your_teacher_school">
           <p><%=@current_student.teacher.subject %>担当</p>
         </div>
+        
       </div>
     </div>
   </div>
