--- a/app/assets/stylesheets/student-and-teacher.scss
+++ b/app/assets/stylesheets/student-and-teacher.scss
@@ -3,7 +3,7 @@
   grid-template-columns: 80% 20%;
   text-align: center;
   padding: 20px 60px;
-  background: linear-gradient(to bottom, #DDDDDD, #EEEEEE	, white);
+  background: white;
 }
 
 .student-and-teacher_title h2 {
