--- a/app/assets/stylesheets/student_profile.scss
+++ b/app/assets/stylesheets/student_profile.scss
@@ -1,6 +1,6 @@
 .student-profile {
   text-align: center;
-  margin: 50px 20px;
+  margin: 40px 20px;
 }
 
 .student-profile-img {
@@ -8,8 +8,8 @@
 }
 .student-profile-img-self {
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  height: 180px;
+  width: 180px;
   object-fit: cover;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, .3);
 }
@@ -34,7 +34,7 @@
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
-  background-color: #7ED1E6;
+  background-color: #0000CD;
   border-radius: 5px;
   }
 
@@ -42,15 +42,12 @@
   font-family: 'Osaka', serif;
 }
 
-
-
-
 .your_teachers_title {
   display: grid;
   grid-template-columns: 80% 20%;
   justify-content: space-around;
   background-color: #555555;
-  padding: 20px 60px;;
+  padding: 10px 60px;;
   color: white;
   font-family: 'arial';
   align-items: center;
@@ -87,7 +84,7 @@
   margin: 20px  10px 20px 10px;
   padding: 20px;
   text-align: center; 
-  background-color: #555555;
+  background-color: #4169E1;
   color: white;
   align-items: center;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 1);
