--- a/app/views/share/_student-and-teacher.html.erb
+++ b/app/views/share/_student-and-teacher.html.erb
@@ -1,7 +1,7 @@
 <div style="padding: 76px 0 0 0"></div>
 <div class="student-and-teacher_title">
   <div>
-    <h2>About You</h2>
+    <h2>プロフィール</h2>
   </div>
   <div class="student-and-teacher_edit">
     <a href=<%=teacher_url %> class="student-and-teacher_edit_btn">
