--- a/app/views/students/history.html.erb
+++ b/app/views/students/history.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'share/header' %>
 <section class="news_field_background">
-<%= render partial: 'share/title', locals: {each_title: 'StartLearning'} %>
+<%= render partial: 'share/title', locals: {each_title: '学習履歴'} %>
 
 <% @histories.each do |h| %>
   <%= render partial: 'share/student-history', locals: {variable: h} %>
