--- a/app/assets/stylesheets/new_learnig_history.scss
+++ b/app/assets/stylesheets/new_learnig_history.scss
@@ -14,6 +14,10 @@
   box-shadow: 0 10px 25px 0 #333333;
 }
 
+.comment_contaner {
+  margin-top: 10px;
+}
+
 #timerLabel {
   margin-top: 30px;
   color: white;
@@ -21,7 +25,19 @@
 }
 
 .information_container {
-  padding: 30px 20%;
+  padding: 30px 10%;
+}
+
+.text_container > .form-control{
+  height: 60px;
+  background-color:  #0000AA	!important;
+  color: white !important;
+}
+
+.comment_contaner > .form-control {
+  height: 60px;
+  background-color:  #0000AA	!important;
+  color: white !important;
 }
 
 #new_history_buttons {
