--- a/app/assets/stylesheets/calender.scss
+++ b/app/assets/stylesheets/calender.scss
@@ -3,8 +3,8 @@
 // }
 
 .calendar-wrapper {
-  height: 100vh;
-  padding: 30px 100px;
+  height: 95vh;
+  padding: 30px 80px 0px 80px;
 }
 
 .fc-time {
@@ -25,7 +25,7 @@
 }
 .events_index_wrapper {
   background: #fff;
-  padding: 30px;
+  padding: 0 30px;
 }
 .events_index_wrapper .event_card{
   background: #fff;
@@ -39,27 +39,47 @@
   width: 30%;
   height: 100%;
   padding: 30px;
-  background: linear-gradient(to right,#209bff,#89e7ff);
+  background: linear-gradient(to right, #000077, #0000AA, #000077) !important;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
+
+.left > h3 {
+  margin-bottom: 0 !important;
+}
+
 .events_index_wrapper .right{
   width: 70%;
   height: 100%;
   background-color: #fff;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
-  padding: 10px 20px;
+  padding: 8px 20px 3px 20px;
 }
+
+.right-description {
+  font-size: 14px;
+  margin-bottom: 0;
+  margin-left: 5px;
+}
+
+.events_index_wrapper .right > small {
+  font-size: 5px;
+}
+
 .homework_wrapper {
-  padding: 5px 20px;
-  width: 200px;
+  display: grid;
+  grid-template-columns: 13% 87%;
+  padding: 5px 10px;
+  width: 100%;
   border: 1px solid #ccc;
   border-left: 3px solid tomato;
   float: right;
+  
 }
 .homework_wrapper p{
   margin: 0;
+  font-size: 13px;
 }
 
 @media (min-width: 0px) and (max-width: 500px) {
@@ -72,12 +92,18 @@
   .fc-day-number {
     font-size: 5px;
   }
+
+  .events_index_wrapper .event_card{
+    border-radius: 5px;
+    margin-bottom: 20px;
+  }
+
   .events_index_wrapper .left {
     width: 100%;
     flex-shrink: 0;
     padding: 10px;  
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
     border-bottom-left-radius: 0;
   }
   .events_index_wrapper .right {
@@ -86,10 +112,5 @@
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
   }
-  // #calendar {
-  //   height: 100%;
-  // }
-  // .fc td {
-  //   height: 50px;
-  // }
+  
 }
