--- a/app/views/students/show_calender.html.erb
+++ b/app/views/students/show_calender.html.erb
@@ -1,24 +1,26 @@
 <%= render 'share/header' %>
 <div style="padding-top: 100px;"></div>
 <div class="calendar-wrapper">
-<div id="calendar" style="height: 1000px;"></div>
+  <div id="calendar" style="height: 1000px;"></div>
 </div>
 
 <div class="events_index_wrapper">
   <% @events.each do |e| %>
     <div class="event_card">
       <div class="left">
-        <h3 style="color: #fff;font-size: 24px;"><%= e.title%></h3>
+        <h3 style="color: #fff;font-size: 15px;"><%= e.title%></h3>
         <small style="color: #eee;"><%= e.start.to_s(:datetime_jp)%></small>
       </div>
       <div class="right">
         <span class="badge badge-info">
           <small><%= e.subject %></small>
         </span>
-        <h4 style="font-size: 20px; margin: 7px 0"><%= e.description %></h4>
-        <small><%= e.start.to_s(:datetime_jp) %> ~ <%= e.end.to_s(:datetime_jp) %></small>
+        <span class="right-description"><%= e.description %></span>
+        <br>
+        <small><%= e.start.to_s(:datetime_jp)[14, 20] %> ~ <%= e.end.to_s(:datetime_jp)[14, 20] %></small>
         <div class="homework_wrapper">
-          <p>宿題 : <%= e.homework %></p>
+          <div><p>宿題</p></div>
+          <div><p><%= e.homework %></p></div>
         </div>
       </div>
     </div>
