カレンダーのイベント表示のバグを修正。

--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -27,7 +27,7 @@
     </div>
     <div class="bg-dark p-4">
       <% if @current_student %>
-        <a href="/history"><h5 class="text-white h4">学習履歴</h5></a>
+        <a href="/students/history"><h5 class="text-white h4">学習履歴</h5></a>
       <% else %>
         <a href="/teachers/history"><h5 class="text-white h4">生徒の学習履歴</h5></a>
       <% end %>
