--- a/app/views/teachers/show_test.erb
+++ b/app/views/teachers/show_test.erb
@@ -1,6 +1,14 @@
 <%= render partial: 'share/header' %>
-<section class="new_msg_section">
+<section class="new_msg_section" id= "show_your_students_test">
 <%= render partial: 'share/title', locals: {each_title: 'テスト成績'} %>
+
+<div class="submit_new_msg">
+  <div class="my-1 submit_new_msg1">
+  <button type="submit" class="btn btn-primary" id="new_test">
+    新しいテストを追加する
+  </button>
+  </div>
+</div>
 
 <div class="show_test_student_list">
   <ul class="nav nav-tabs">
@@ -48,7 +56,7 @@
       </div>
     </div>
     <div class="test_history_score_list">
-      <% s.tests.each do |t| %>
+      <% s.tests.sort.reverse.each do |t| %>
       <div class="each_test_history_score_card">
         <div class="each_test_history_score_card_upper">
           <div>
@@ -75,3 +83,81 @@
   </div>
   <% end %>
 </div>
+</section >
+
+
+
+<section>
+<div style="padding: 76px 0 0 0"></div>
+<p id=current_teacher_id style = display:none;>
+  <%= @current_teacher.id %>
+</p>
+
+<div class="new_test_container" id= "new_your_students_test">
+    <form>
+      <div class="choise_student">
+          <div class="my-1">
+            <label for="inlineFormCustomSelect">追加したい生徒のテスト</label>
+            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect1">
+              <% @students.each do |s| %>
+              <option value="<%=s.id %>" 
+                <% if s.id == 0 %>
+                selected
+                <% end %>
+              >
+                <%=s.full_name %>のテスト
+              </option>
+              <% end %>
+            </select>
+          </div>
+      </div>
+
+      <div class="new_test_text">
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">テスト名を記入</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </div>
+
+      <div class="score_wrapper">
+        <div class="choise_score">
+          <label for="exampleFormControlTextarea1">点数を入力</label>
+          <input class="form-control" type="number" value="0" id="example-number-input1" max="100" min="0">
+        </div>
+        
+        <div class="choise_average_score">
+          <label for="exampleFormControlTextarea1">平均点を入力</label>
+          <input class="form-control" type="number" value="0" id="example-number-input2" max="100" min="0">
+        </div>
+      </div>
+
+      <div class="choise_grade">
+          <div class="my-1">
+          <label for="exampleFormControlTextarea1">評価を選択</label>
+            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect2">
+              <option selected>A</option>
+              <option value="1">B</option>
+              <option value="2">C</option>
+              <option value="3">D</option>
+            </select>
+          </div>
+      </div>
+
+      <div class="form-group row choise_date">
+      <label for="example-date-input" class="col-5 col-form-label">テスト実施日</label>
+        <div class="col-7">
+          <% require "date" %>
+          <input class="form-control" type="date" value="<%=  Date.today %>" id="example-date-input">
+        </div>
+      </div>
+
+      <div class="submit_new_msg">
+        <div class="my-1 submit_new_msg1">
+          <button type="submit" class="btn btn-primary" id="add_test">
+              追加する
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</section>
