テスト新規追加フォームをform_forメソッドに修正。

--- a/app/assets/stylesheets/calender.scss
+++ b/app/assets/stylesheets/calender.scss
@@ -74,7 +74,7 @@
 .events_index_wrapper .left{
   width: 30%;
   height: 100%;
-  padding: 30px;
+  padding: 50px 30px;
   background: linear-gradient(to right, #000077, #0000AA, #000077) !important;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
