カレンダーイベントページのデザインしました

--- a/app/assets/stylesheets/new_msg.scss
+++ b/app/assets/stylesheets/new_msg.scss
@@ -33,4 +33,5 @@
 .submit_new_msg .btn-primary {
   background: linear-gradient(to right, #000077, #0000AA, #000077) !important;
   border-color: #000077 !important;
+  color: white !important;
 }
