--- a/app/views/teachers/edit_test.html.erb
+++ b/app/views/teachers/edit_test.html.erb
@@ -1,4 +1,4 @@
-<!-- <%= render partial: 'share/header' %>
+<%= render partial: 'share/header' %>
 <div style="padding: 76px 0 0 0"></div>
 <p id=current_teacher_id style = display:none;>
   <%= @current_teacher.id %>
