--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,3 +1,115 @@
 // Place all the styles related to the events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.new_events_wrapper {
+  margin: 10px 5%;
+  box-shadow: 0 0 8px gray;
+  padding: 10px 5px;
+}
+
+.new_events_wrapper .choise_student .form-group {
+  margin-bottom: 0 !important;
+}
+
+
+.new_events_wrapper .choise_student .form-group label {
+  font-size: 14px;
+}
+
+.new_events_wrapper .choise_student .form-group select {
+  font-size: 14px;
+}
+
+.new_events_text > .form-group {
+  margin-bottom: 0 !important; 
+}
+
+.new_events_text > .form-group > .form-control {
+  border: 1.5px solid white !important;
+  background-color: #F5F5F5 !important;
+  height: 45px !important;
+}
+
+.new_events_text > .form-group > .form-control:focus {
+  box-shadow: none !important;
+}
+
+.new_events_text > .form-group label {
+  font-size: 14px; 
+}
+
+.new_events_content > .form-group  {
+  margin-bottom: 0 !important;
+}
+
+.new_events_content > .form-group label {
+  font-size: 14px; 
+}
+
+.new_events_content > .form-group > .form-control {
+  border: 1.5px solid white !important;
+  background-color: #F5F5F5 !important;
+  height: 60px !important;
+  width: 100% !important;
+}
+
+
+.new_events_content > .form-group > .form-control:focus {
+  box-shadow: none !important;
+}
+
+.new_events_subject > .form-group {
+  margin-bottom: 0;
+}
+
+.new_events_subject > .form-group label {
+  font-size: 14px;  
+}
+
+.new_events_subject > .form-group > .form-control {
+  border: 1.5px solid white !important;
+  background-color: #F5F5F5 !important;
+  height: 40px !important;
+  width: 50% !important;
+}
+
+.new_events_subject > .form-group > .form-control:focus {
+  box-shadow: none !important;
+}
+
+.new_events_date > .form-group {
+ margin-bottom: 0 !important;
+}
+
+.new_events_date > .form-group select{
+  font-size: 11px;
+  background-color: #F5F5F5 !important;
+}
+
+.new_events_date > .form-group label{
+  font-size: 13px;
+}
+
+.allday_events > .form-group {
+  margin-bottom: 0 !important;
+}
+
+
+.allday_events > .form-group > label{
+  font-size: 13px;
+}
+
+.homework_events > .form-group > label{
+  font-size: 13px;
+}
+
+.homework_events > .form-group > .form-control{
+  border: 1.5px solid white !important;
+  background-color: #F5F5F5 !important;
+  height: 40px !important;
+  width: 100% !important;
+}
+
+.homework_events > .form-group > .form-control:focus {
+  box-shadow: none !important;
+}
