--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,16 +1,22 @@
 <%= render partial: 'share/header' %>
+<div style="padding: 76px 0 0 0"></div>
 <div class="students-index-wrapper">
   <div class="student-index-card-wrapper">
     <% @students.each do |s| %>
       <div class="student-index-card">
         <%= image_tag s.image.url , class: "student-profile-img-self index" %>
-        <a href="/students/<%= s.id %>"><%= s.full_name %></a>
-        <button type="button" class="btn btn-outline-primary">
-          追加する 
-          <span class="badge badge-light">
-            <i class="fas fa-plus your_students_add_icon"></i>
-          </span>
-        </button>
+        <div>
+          <a href="/students/<%= s.id %>"><%= s.full_name %>君</a>
+          <% if @current_teacher.id == s.teacher_id %>
+           <div class="already-your-student">
+             すでにあなたの生徒です
+           </div>
+        </div>
+          <% else %>
+          <button type="button" class="btn btn-outline-primary">
+            追加
+          </button>
+          <% end %>
       </div>
     <% end %>
   </div>
