--- a/app/views/teachers/history.html.erb
+++ b/app/views/teachers/history.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'share/header' %>
 <section class="news_field_background">
-<%= render partial: 'share/title', locals: {each_title: 'StartLearning'} %>
+<%= render partial: 'share/title', locals: {each_title: '学習を始める'} %>
 
 <div class="show_test_student_list">
   <ul class="nav nav-tabs">
